--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<title>Seminário PET - Rasterização 3D</title>
+    <meta name="description" content="Seminário do Programa de Educação Tutorial sobre Rasterização e o Graphics Pipeline.">
+    <meta name="author" content="Josivan Medeiros da Silva Gois">
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
